# formatter

./: Cargo.toml  README.ja.md  README.md
.github/workflows/: release.yml
src/: biome.rs  config.rs  eof_newline.rs  main.rs  oxfmt.rs  resolve.rs
