[package]
name = "claude-formatter"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "formatter"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.25.0"
