[package]
name = "formatter"
version = "0.6.0"
edition = "2024"
description = "PostToolUse hook for Claude Code that auto-formats files"
license = "MIT"
repository = "https://github.com/thkt/formatter"
readme = "README.md"
keywords = ["claude", "formatter", "hook"]

[[bin]]
name = "formatter"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
