[package]
name = "formatter"
version = "0.8.2"
edition = "2024"
description = "PostToolUse hook for Claude Code that auto-formats files"
license = "MIT"
repository = "https://github.com/thkt/formatter"
readme = "README.md"
keywords = ["claude", "formatter", "hook"]

[[bin]]
name = "formatter"
path = "src/main.rs"

[dependencies]
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
